# DIDSA-CAD

./: .gitignore  .gitmodules  README.md
.github/workflows/: backend-verify.yml  client-verify.yml  stage0-verify.yml
backend/: Dockerfile  environment.yml
backend/app/: auth.py  main.py
backend/tests/: conftest.py  test_bugfix_flipped_plane_arc_chirality.py  test_bugfix_hide_vs_rollback_exclusion.py  test_bugfix_horizontal_vertical_distance_sign.py  test_bugfix_provisional_size_constraints.py  test_bugfix_trim_circle_coincident_endpoints.py  test_feature_convert_entities.py  test_feature_curved_edge_conversion.py  test_feature_offset_chain.py  test_feature_offset_entities.py  test_feature_orphaned_point_pruning.py  test_feature_standalone_sketch_export_import.py  test_mesh_data.py  test_mesh_export.py  test_mesh_import.py  test_residual_verified_convergence.py  test_stage0_occt.py  test_stage11_edges.py  test_stage12_constraints.py  test_stage15_constraints.py  test_stage16_arc.py  test_stage17_ellipse.py  test_stage18_spline.py  test_stage19_text.py  test_stage1_sketch.py  test_stage23_mesh_ids.py  test_stage2_profile.py  test_stage2_sketch.py  test_stage2a_solver.py  test_stage2b_solver_integration.py  test_stage3_api_key_auth.py  test_stage5_circle.py  test_stage6_delete.py  test_stage7_document.py  test_stage9_extrude.py  test_stage_a1_graph.py  test_stage_a1_multibody.py  test_stage_b1_model.py  test_stage_b1_subshape.py  test_stage_b2_cascade.py  (+33 more)
client/: .gitignore  README.md  pubspec.yaml
client/android/: .gitignore
client/lib/: config.dart  connection_screen.dart  didsa_logo_button.dart  main.dart  secrets.example.dart  tool_chooser_screen.dart
client/linux/: CMakeLists.txt
client/native/slvs/: .gitignore  CMakeLists.txt  slvs_ffi_shim.cpp  slvs_ffi_shim.h
client/native/slvs/desktop_parity_harness/: pubspec.yaml
client/test/: body_naming_test.dart  chamfer_panel_test.dart  clip_distance_test.dart  closed_ghost_loops_test.dart  create_plane_geometry_3d_test.dart  create_plane_panel_test.dart  document_api_client_test.dart  dof_analysis_test.dart  extrude_panel_test.dart  feature_picker_sheet_test.dart  feature_tree_grouping_test.dart  feature_tree_panel_test.dart  fillet_panel_test.dart  local_solver_test.dart  mesh_data_test.dart  mesh_geometry_test.dart  mirror_panel_test.dart  orbit_camera_test.dart  orientation_facing_plane_test.dart  override_stack_test.dart  part_screen_test.dart  part_viewport_test.dart  plane_indicator_test.dart  reference_planes_test.dart  rollback_test.dart  screen_projection_test.dart  selection_actions_test.dart  (+26 more)
docs/: didsa-longterm-vision-and-model.md  flutter-widget-test-lessons.md  live-preview-pattern.md  pattern-mirror-scope.md  project-brief.md  roadmap.md  sketcher-architecture-ux-scoping.md  sketcher-overhaul-scope.md  sketcher-restructure-plan.md  sketcher-spikes-ffi-and-plane-sketch.md  status-2026-06-21.md  status-2026-06-22.md  status-2026-06-23-stage10a.md  status-2026-06-23-stage10b.md  status-2026-06-23-stage11.md  status-2026-06-23-stage13.md  status-2026-06-23.md  status-2026-06-24-stage15.md  status-2026-06-25-stage18.md  status-2026-06-25-stage19a.md  status-2026-06-26-stage20.md  status-2026-06-26-stage21.md  status-2026-06-26-stage22.md  status-2026-06-26-stage23.md  status-2026-06-27-stage23-fixes.md  status-2026-06-30-box-selection-report.md  status-2026-06-30-prompt-a.md  status-2026-06-30-prompt-b-bugfixes.md  status-2026-06-30-prompt-b.md  status-2026-06-30-prompt-d.md  status-2026-06-30-viewport-fixes-2.md  status-2026-07-01-prompt-c-bugfixes-2.md  status-2026-07-01-prompt-c.md  status.md
(+122 files in other folders)
